# motogp-results-displayer

./: package-lock.json  package.json  pyproject.toml
app/: page.tsx
app/about/: page.tsx
app/components/: Navbar.jsx
